--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
     <section>
       <h2>Video Giới Thiệu</h2>
       <video controls>
-        <source src="C:/Users/pc/Downloads/2909914-uhd_3840_2024_24fps.mp4" type="video/mp4" />
+        <source src="https://cdn.pixabay.com/video/2022/04/04/112893-696273049_large.mp4" type="video/mp4" />
         Trình duyệt của bạn không hỗ trợ video.
       </video>
     </section>
@@ -253,5 +253,6 @@
 </body>
 
 </html>
+
 
 
