--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
 
     <section class="form-container">
       <h2>✉️ Gửi Thông Tin Liên Hệ</h2>
-      <form action="mailto:cafemoc@example.com" method="POST" enctype="text/plain">
+      <form action="mailto:tranthanhtuan1278@gmail.com" method="POST" enctype="text/plain">
         <label for="name">Họ tên:</label>
         <input type="text" id="name" name="Họ tên" required>
 
@@ -208,4 +208,5 @@
     © 2025 Cà Phê Mộc. Kết nối yêu thương qua từng giọt cà phê.
   </footer>
 </body>
+
 </html>
