--- a/contact.html
+++ b/contact.html
@@ -173,13 +173,13 @@
       <h2>📍 Thông Tin Liên Hệ</h2>
       <p><strong>Địa chỉ:</strong> Trường TCVN Bến Lức, Long An</p>
       <p><strong>Điện thoại:</strong>0903 992 993</p>
-      <p><strong>Email:</strong> <a href="mailto:cafemoc@example.com">tranthanhtuan@example.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:tranthanhtuan@example.com">tranthanhtuan@example.com</a></p>
       <p><strong>Giờ mở cửa:</strong> 7:00 - 22:00 (Tất cả các ngày trong tuần)</p>
     </section>
 
     <section class="form-container">
       <h2>✉️ Gửi Thông Tin Liên Hệ</h2>
-      <form action="mailto:tranthanhtuan1278@gmail.com" method="POST" enctype="text/plain">
+      <form action="mailto:tranthanhtuan@example.com" method="POST" enctype="text/plain">
         <label for="name">Họ tên:</label>
         <input type="text" id="name" name="Họ tên" required>
 
@@ -210,3 +210,4 @@
 </body>
 
 </html>
+
