--- a/main.html
+++ b/main.html
@@ -186,7 +186,7 @@
   </header>
 
   <nav>
-    <a href="index.html">Trang Chủ</a>
+    <a href="main.html">Trang Chủ</a>
     <a href="about.html">Giới Thiệu</a>
     <a href="contact.html">Liên Hệ</a>
   </nav>
@@ -338,4 +338,5 @@
     }
   </script>
 </body>
+
 </html>
