--- a/about.html
+++ b/about.html
@@ -200,8 +200,7 @@
 
   <!-- Nhạc nền -->
   <audio id="backgroundMusic" autoplay loop>
-    <source src="media/piano.mp3" type="audio/mpeg">
-    Trình duyệt của bạn không hỗ trợ nhạc nền.
+    <source src="https://zingmp3.vn/bai-hat/Soothing-Serenade-Music-30-365/Z6F79ZI0.html" type="audio/mpeg">
   </audio>
 
   <main>
@@ -252,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
