--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 
   <!-- Nhạc nền -->
   <audio id="backgroundMusic" autoplay loop>
-    <source src="https://zingmp3.vn/bai-hat/Soothing-Serenade-Music-30-365/Z6F79ZI0.html" type="audio/mpeg">
+    <source src="https://rr5---sn-oj5hn5-55.googlevideo.com/videoplayback?expire=1756935918&ei=jWK4aOKJO7LFy_sPnNuJgAI&ip=2a09%3Abac5%3Ac828%3A2832%3A%3A401%3A3a&id=o-AHG61a0dWRlBlIVOry33MrtLWb5ZWOSbW9taDnBdFaSl&itag=140&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&bui=AY1jyLPha_udbDSnoAuluX5fd16QZnxvqeAu5Suuy8UQEqBomEMRoRNslhjfN-69_x_tpu3YOBIHLknA&vprv=1&svpuc=1&mime=audio%2Fmp4&ns=RmAgfsWqlZXf-DBYx6vY_0EQ&rqh=1&gir=yes&clen=3569729&dur=220.519&lmt=1746577027218412&keepalive=yes&lmw=1&fexp=24350590,24350737,24350827,24351316,24351318,24351528,24352001,24352220,24352559,24352568,24352574,24352580,24352582,24352697,24352699,24352882,24352884,24352960,24352985,24352987,24353151,24353168,24353170,51557447,51565115,51565682,51580970&c=TVHTML5&sefc=1&txp=5318224&n=EUBaMLfxQTvwmQ&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cbui%2Cvprv%2Csvpuc%2Cmime%2Cns%2Crqh%2Cgir%2Cclen%2Cdur%2Clmt&sig=AJfQdSswRQIhAKZZPO9Ong1jiJ2l0fnwlZRUegtx91EbEHnu87aBv-_lAiBcGgpaWW9LQhcruphdPzRwRH5hvxOMmWsTogVEYFBtiQ%3D%3D&title=Ti%E1%BB%87c+tr%C3%A0+sao+%7C+Nh%E1%BA%A1c+Trung+%7C+TikTok+Piano+cover&redirect_counter=1&cm2rm=sn-p5qyy7l&rrc=80&req_id=4a73f46b4b0ea3ee&cms_redirect=yes&cmsv=e&met=1756914385,&mh=ih&mip=2405:4802:80b4:6980:e1c4:c126:2f32:36eb&mm=34&mn=sn-oj5hn5-55&ms=ltu&mt=1756913935&mv=D&mvi=5&pl=0&rms=ltu,au&lsparams=met,mh,mip,mm,mn,ms,mv,mvi,pl,rms&lsig=APaTxxMwRQIgIlhfm9AgoJpD_6jZCMJfJa1WKWRiDkHkqv4rbFErP0YCIQCtGJHCRSxUBUitMJ0flSpgEC3ZUiJDj6ozpxPmyNpzkw%3D%3D" type="audio/mpeg">
   </audio>
 
   <main>
@@ -251,6 +251,7 @@
 </body>
 
 </html>
+
 
 
 
