--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Đăng Nhập / Đăng Ký - Cà Phê Mộc</title>
+<title>Đăng Nhập / Đăng Ký - Cà Phê Thiên Sứ</title>
 <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&family=Sacramento&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;font-family:'Cherry Swash',cursive;}
@@ -281,3 +281,4 @@ for(let i=0;i<20;i++){
 </script>
 </body>
 </html>
+
