--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Liên Hệ - Cà Phê Thiên Sứ</title>
+<title>Liên Hệ - Du Lịch Đà Lạt</title>
 <link href="https://fonts.googleapis.com/css2?family=Cherry+Swash&family=Sacramento&display=swap" rel="stylesheet">
 <style>
 *{margin:0;padding:0;box-sizing:border-box;}
@@ -193,11 +193,11 @@ footer{
 </head>
 <body>
 
-<header>📬 Liên Hệ Cà Phê Thiên Sứ 🌸</header>
+<header>🌸 Liên Hệ Du Lịch Đà Lạt 🌸</header>
 
 <nav>
 <a href="main.html">Trang Chủ</a>
-<a href="about.html">Giới Thiệu</a>
+<a href="about.html">Giới Thiệu Tour</a>
 <a href="contact.html">Liên Hệ</a>
 </nav>
 
@@ -214,7 +214,7 @@ footer{
   <p><strong>Địa chỉ:</strong> Trường TCVN Bến Lức, Long An</p>
   <p><strong>Điện thoại:</strong> 0903 992 993</p>
   <p><strong>Email:</strong> <a href="mailto:cafemoc@example.com">tranthanhtuan@example.com</a></p>
-  <p><strong>Giờ mở cửa:</strong> 7:00 - 22:00 (Tất cả các ngày trong tuần)</p>
+  <p><strong>Giờ online:</strong> 7:00 - 23:00 (Tất cả các ngày trong tuần)</p>
 </section>
 
 <section class="form-container">
@@ -242,7 +242,7 @@ footer{
 </section>
 </main>
 
-<footer>© 2025 Cà Phê Thiên Sứ </footer>
+<footer>© 2025 Du Lịch Đà Lạt </footer>
 
 <script>
 // Music control
